--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn, .btn-secondary {
   display: flex;
+  height: 40px;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 8px;
+  border: none;
+  border-radius: 100px;
+  background-color: #005858;
   color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.1px;
+  font-weight: 500;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-secondary {
+  background-color: transparent;
+  color: #005858;
+  border: 1px solid #005858;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .btn:hover {
+  background-color: #45A67E;
 }
+
+.btn-secondary:hover {
+  background-color: #57B890;
+  color: white;
+} */
