--- a/src/app/App.css
+++ b/src/app/App.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px 24px;
   gap: 8px;
   border: none;
   border-radius: 100px;
