--- a/src/app/components/Hero/style.module.css
+++ b/src/app/components/Hero/style.module.css
@@ -3,6 +3,7 @@
     padding: 80px 0px;
     align-items: center;
     gap: 10px;
+    overflow: hidden;
 }
 
 .textbox {
@@ -31,4 +32,32 @@
     font-family: "Roboto", sans-serif;
     font-size: 20px;
     font-weight: 400;
+}
+
+@media (max-width:500px) {
+    .hero {
+        overflow: hidden;
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .image {
+        width: 350px;
+        height: 400px;
+        flex-shrink: 0;
+    }
+
+    .textbox {
+        display: flex;
+        width: 250px;
+        padding: 15px 30px;
+        gap: 3px;
+        position: absolute;
+        right: 2px;
+        top: 450px;
+    }
+
+    .text p {
+        font-size: 16px;
+    }
 }
