--- a/src/app/App.css
+++ b/src/app/App.css
@@ -31,3 +31,23 @@
   background-color: #57B890;
   color: white;
 } */
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: #181C1C;
+}
+
+h2, h1 {
+  font-family: "Pacifico";
+  font-size: 28px;
+  font-weight: 400;
+  color: #181C1C;
+}
+
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+
