--- a/src/app/components/Browse/style.module.css
+++ b/src/app/components/Browse/style.module.css
@@ -30,3 +30,32 @@
     width: 200px;
     font-family: "Roboto", sans-serif;
 }
+
+@media (max-width:500px) {
+    .container {
+        flex-direction: column;
+        padding: 40px 20px;
+        align-items: flex-start;
+        justify-content: center;
+        gap: 0;
+        overflow: hidden;
+    }
+    .dogbox, .catbox {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .image {
+        width: 300px;
+        height: 220px;
+    }
+    
+    .image2 {
+        width: 200px;
+        height: 200px;
+    }
+
+    .cat h1 {
+        font-size: 28px;
+    }
+}
