--- a/src/app/components/Header/LandingPageNavigation.css
+++ b/src/app/components/Header/LandingPageNavigation.css
@@ -28,6 +28,40 @@ nav ul li a {
     font-family: "Roboto", sans-serif;
 }
 
+.dropdown-toggle {
+    background-color: transparent;
+    color: white;
+    padding-left: 10px;
+    padding-top: 5px;
+    border: none;
+    cursor: pointer;
+  }
+
+.icon {
+    color: white;
+    padding-right: 10px;
+}
+
+.dropdown-menu {
+    display: block;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-item {
+    padding: 12px 5px;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+}
+
+.dropdown-item:hover {
+    /* border-left: 1px solid #005858; */
+    color: #005858;
+  }
+
 .search {
     background-color: #008080;
     padding: 25px 100px;
@@ -49,4 +83,11 @@ nav ul li a {
     font-size: var(--sds-typography-body-size-medium);
     font-style: normal;
     opacity: var(--sds-size-stroke-border);
+}
+
+.searchicon {
+    color: #005858;
+    position: absolute;
+    left: 73%;
+    margin-bottom: 90%;
 }
