--- a/src/app/components/Newsletter/style.module.css
+++ b/src/app/components/Newsletter/style.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    padding: 10px 100px;
+    padding: 10px 100px 60px 100px;
     justify-content: center;
     align-items: center;
     gap: 60px;
