--- a/src/app/components/Header/LandingPageNavigation.css
+++ b/src/app/components/Header/LandingPageNavigation.css
@@ -4,7 +4,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    align-self: stretch;
     opacity: var(--sds-size-stroke-border);
     position: sticky;
 }
@@ -35,7 +34,7 @@ nav ul li a {
     padding-top: 5px;
     border: none;
     cursor: pointer;
-  }
+}
 
 .icon {
     color: white;
@@ -47,10 +46,10 @@ nav ul li a {
     position: absolute;
     background-color: #f9f9f9;
     width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-  
+
 .dropdown-item {
     padding: 12px 5px;
     cursor: pointer;
@@ -60,7 +59,7 @@ nav ul li a {
 .dropdown-item:hover {
     /* border-left: 1px solid #005858; */
     color: #005858;
-  }
+}
 
 .search {
     background-color: #008080;
@@ -89,5 +88,74 @@ nav ul li a {
     color: #005858;
     position: absolute;
     left: 73%;
-    margin-bottom: 90%;
+    margin-top: -22px;
+}
+
+.menu-icon,
+.icons {
+    display: none;
+}
+
+@media (min-width:500px) and (max-width:900px) {
+    header {
+        padding: 10px;
+    }
+
+    .logo {
+        width: 120px;
+        height: 18.828px;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0px;
+        padding-left: 20px;
+        top: 40px;
+        background-color: #005858;
+    }
+
+    .menu ul {
+        display: none;
+        padding: 0;
+    }
+
+    .menu ul.mobile {
+        display: block;
+    }
+
+    .menu ul li {
+        padding: 10px 0;
+    }
+
+    .menu2 {
+        display: none;
+    }
+
+    .menu li.hidden-mobile {
+        display: none;
+    }
+
+    .search {
+        padding: 10px;
+    }
+
+    .search input {
+        width: 80%;
+        margin: 0;
+        padding: 0 20PX;
+    }
+
+    .search input label {
+        font-size: 12px;
+    }
+
+    .searchicon {
+        left: 80%;
+    }
 }
