--- a/src/app/components/Newsletter/style.module.css
+++ b/src/app/components/Newsletter/style.module.css
@@ -61,3 +61,66 @@ input {
     height: 47.2px;
     transform: rotate(0deg);
 }
+
+@media (max-width:900px) {
+    .container {
+        padding: 20px;
+        gap: 20px;
+        overflow: hidden;
+    }
+
+    .textbox {
+        width: 320px;
+        gap: 20px;
+        overflow: hidden;
+    }
+
+    .container h1 {
+        font-size: 22px;
+    }
+
+    .inputbox {
+        flex-direction: column;
+        width: 300px;
+        height: 52px;
+    }
+    
+    .button {
+        width: 270px;
+    }
+    
+    input {
+        width: 80%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    
+    .downloadbutton {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+    }
+    .downloadbox {
+        width: 300px;
+    }
+}
+
+@media (max-width:500px) {
+    .container {
+        flex-direction: column;
+        padding: 10px;
+        gap: 20px;
+        align-self: stretch;
+        background-color: #F6FAF9;
+    }
+
+    .stroke {
+        display: none;
+    }
+
+    .container h1 {
+        font-size: 22px;
+        font-family: "Pacifico", sans-serif;
+    }
+}
