--- a/src/app/components/HeroProductDetail/style.module.css
+++ b/src/app/components/HeroProductDetail/style.module.css
@@ -188,9 +188,14 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+
+.dropdownitem:hover {
+    border-left: 1px solid #008080;
+    background-color: #008080;
+}
   
 .dropdownitem {
-    padding: 12px 5px;
+    padding: 12px 0;
     cursor: pointer;
     font-family: "Roboto", sans-serif;
     list-style: none;
