--- a/src/app/components/Cart/Cart/style.module.css
+++ b/src/app/components/Cart/Cart/style.module.css
@@ -90,10 +90,21 @@
 .amountbox {
     display: flex;
     width: 300px;
-    padding: 60px 80px;
+    padding: 40px 60px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 40px;
     border-radius: 20px;
     background: var(--Schemes-Surface, #F6FAF9);
+}
+
+.headbox {
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    justify-content: space-between;
+}
+
+.headbox h2 {
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
 }
