--- a/src/app/components/Products/style.module.css
+++ b/src/app/components/Products/style.module.css
@@ -60,6 +60,7 @@
 
 .productsimages {
     height: 180px;
+    cursor: pointer;
 }
 
 .name {
@@ -127,6 +128,7 @@
 
 .button {
     margin-bottom: 20px;
+    border: 1px solid #FF8376;
 }
 
 .productbox {
@@ -153,6 +155,7 @@
     width: 24px;
     height: 24px;
     padding: 8px;
+    cursor: pointer;
 }
 
 .lefticon, .active {
