--- a/src/app/components/CheckoutBody/style.module.css
+++ b/src/app/components/CheckoutBody/style.module.css
@@ -299,6 +299,13 @@ section h2 {
     font-size: 20px;
 }
 
+.statebox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+}
+
 @media (max-width:900px) {
     section {
         display: flex;
@@ -314,6 +321,10 @@ section h2 {
         padding: 20px 10px;
         padding-bottom: 0;
         overflow: hidden;
+    }
+
+    .statebox {
+        gap: 5px;
     }
 
     .title {
