--- a/src/app/components/Footer/style.module.css
+++ b/src/app/components/Footer/style.module.css
@@ -98,6 +98,30 @@
     font-family: "Roboto", sans-serif;
 }
 
+@media (max-width:900px) {
+    .menu {
+        flex-direction: column;
+        padding: 20px 10px;
+        gap: 10px;
+        overflow: hidden;
+    }
+
+    .flex {
+        display: flex;
+        width: 200px;
+        gap: 20px;
+    }
+
+    .copyright {
+        background-color: #008080;
+        padding: 2px 10px;
+    }
+
+    .legal-urls {
+        margin-left: 0;
+    }
+}
+
 @media (max-width:500px) {
     .menu {
         flex-direction: column;
