--- a/src/app/components/RelatedProduct/style.module.css
+++ b/src/app/components/RelatedProduct/style.module.css
@@ -75,7 +75,6 @@
     padding-left: 15px;
     flex-direction: column;
     align-items: flex-start;
-    gap: var(--sds-size-space-300);
     align-self: stretch;
     width: 200px;
 }
@@ -116,4 +115,41 @@
 
 .cartbtnbox {
     align-items: flex-end;
+}
+
+@media (max-width:900px) {
+    .container {
+        display: flex;
+        height: 100%;
+        padding: 20px;
+        gap: 10px;
+    } 
+
+    .productbox {
+        height: 100%;
+    }
+
+    .products {
+        gap: 10px;
+        margin-left: 0;
+    }
+}
+
+@media (max-width:500px) {
+    .container {
+        display: flex;
+        height: 100%;
+        padding: 20px;
+        gap: 20px;
+    } 
+
+    .productbox {
+        height: 100%;
+    }
+
+    .products {
+        flex-direction: column;
+        gap: 10px;
+        margin-left: 0;
+    }
 }
