--- a/src/app/components/HeroProduct/style.module.css
+++ b/src/app/components/HeroProduct/style.module.css
@@ -1,5 +1,9 @@
 .container {
-    padding: 80px 100px 60px 100px;
+    display: flex;
+    padding: 80px 100px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
     background-color: #F6FAF9;
 }
 
@@ -8,12 +12,13 @@
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
+    gap: 90px;
 }
 
 .productbox {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .images {
@@ -31,6 +36,32 @@ line-height: 40px;
 .heading a {
     color: #005858;
     text-decoration: none;
+}
+
+@media (max-width:900px) {
+    .products {
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-right: -200px;
+    }
+
+    .container {
+        padding: 20px 10px;
+        background-color: #F6FAF9;
+    }
+
+    .images {
+        width: 200px;
+        height: 100px;
+    }
+
+    .heading{
+        font-family: "Roboto", sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 20px;
+}
 }
 
 @media (max-width:500px) {
