--- a/src/app/components/Products/style.module.css
+++ b/src/app/components/Products/style.module.css
@@ -7,12 +7,12 @@
 
 .headcotainer {
     display: flex;
-    gap: 18vw;
+    gap: 100px;
     padding: 28px 0px;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
-
+    margin-left: -90px;
 }
 
 .containertext {
@@ -52,6 +52,7 @@
     align-items: flex-start;
     align-content: flex-start;
     gap: 25px;
+    margin-left: -120px;
 }
 
 .productbox {
