--- a/src/app/components/RelatedProduct/style.module.css
+++ b/src/app/components/RelatedProduct/style.module.css
@@ -148,7 +148,7 @@
     }
 
     .products {
-        flex-direction: column;
+        display: flex;
         gap: 10px;
         margin-left: 0;
     }
