--- a/src/app/components/Header/LandingPageNavigation.css
+++ b/src/app/components/Header/LandingPageNavigation.css
@@ -91,8 +91,7 @@ nav ul li a {
     margin-top: -22px;
 }
 
-.menu-icon,
-.icons {
+.menu-icon, .icons {
     display: none;
 }
 
@@ -101,6 +100,14 @@ nav ul li a {
         padding: 10px;
     }
 
+    .menucart {
+        display: flex;
+        gap: 30px;
+    }
+
+    .iconmenu {
+        color: white;
+    }
     .logo {
         width: 120px;
         height: 18.828px;
