--- a/src/app/components/HeroProduct/style.module.css
+++ b/src/app/components/HeroProduct/style.module.css
@@ -72,10 +72,10 @@ line-height: 40px;
     .products {
         display: flex;
         padding: 10px;
-        justify-content: space-between;
-        align-items: center;
-        align-self: stretch;
+        justify-content: center;
+        align-items: flex-start;
         gap: 20px;
+        margin-left: -170px;
     }
 
     .images {
