--- a/src/app/components/Products/style.module.css
+++ b/src/app/components/Products/style.module.css
@@ -290,7 +290,7 @@
         flex-wrap: wrap;
         align-items: flex-start;
         align-content: flex-start;
-        gap: 5px;
+        gap: 30px;
         margin-left: 0;
         
     }
@@ -300,12 +300,12 @@
     }
 
     .description, .description2, .heading {
-        width: 120px;
+        width: 300px;
     }
     .naviation {
         padding: 5px 0px;
         gap: 20px;
-        margin-left: 0;
+        margin-left: 15vw;
     }
     
     .number {
