--- a/src/app/components/Header/LandingPageNavigation.css
+++ b/src/app/components/Header/LandingPageNavigation.css
@@ -95,7 +95,84 @@ nav ul li a {
     display: none;
 }
 
-@media (max-width:500px) and (max-width:900px) {
+@media (max-width:900px) {
+    header {
+        padding: 10px;
+   
+    }
+
+    .menucart {
+        display: flex;
+        gap: 20px;
+        margin-right: 60px;
+    }
+
+    .iconmenu {
+        color: white;
+        width: 24px;
+        height: 24px;
+    }
+    .logo {
+        width: 120px;
+        height: 18.828px;
+    }
+
+    .menu-icon {
+        display: block;
+        width: 24px;
+        height: 24px;
+    }
+
+    .menu {
+        flex-direction: column;
+        position: absolute;
+        left: 0;
+        right: 0px;
+        padding-left: 20px;
+        top: 40px;
+        background-color: #005858;
+    }
+
+    .menu ul {
+        display: none;
+        padding: 0;
+    }
+
+    .menu ul.mobile {
+        display: block;
+    }
+
+    .menu ul li {
+        padding: 10px 0;
+    }
+
+    .menu2 {
+        display: none;
+    }
+
+    .menu li.hidden-mobile {
+        display: none;
+    }
+
+    .search {
+        padding: 10px;
+    }
+
+    .search input {
+        width: 80%;
+        margin: 0;
+        padding: 0 20PX;
+    }
+
+    .search input label {
+        font-size: 12px;
+    }
+
+    .searchicon {
+        left: 80%;
+    }
+}
+@media (max-width:500px)  {
     header {
         padding: 10px;
     }
